--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,3 +7,8 @@
 <% end %>
 
 <%= link_to "Back", tasks_path %>
+
+<%= link_to "Delete",
+  tasks_path(@task),
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+%>
