--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -9,6 +9,8 @@
 <%= link_to "Back", tasks_path %>
 
 <%= link_to "Delete",
-  tasks_path(@task),
+  show_path(@task),
   data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
 %>
+
+<%= link_to "Edit", edit_path  %>
